# tingly-scope

./: .gitignore  README.md  advanced_features  go.mod  go.sum
app/tingly-loop/: README.md  USECASE.md  go.mod  go.sum  init.go  loop.go  tasks.go  utils.go
cmd/examples/: main.go
cmd/formatter_demo/: main.go
cmd/tea_formatter_demo/: main.go
demo/: README.md  go.mod
docs/: advanced_features.md  tool_registry_proposals.md
docs/migration/: 20260124-migration.md
docs/spec/: 20260127-dual-act-agent-spec.md  example_dualact_usage.go
example/: README.md  main.go
example/advanced_features/: main.go
example/chat/: go.mod
example/dualact-demo/: README.md  go.mod  go.sum  output.md
example/formatter_demo/: main.go
example/rag-demo/: go.mod  main.go
example/react-fetch/: go.mod
example/simple/: main.go
example/tea_formatter_demo/: main.go
example/tingly-code/: README.md  README_DUAL_EXAMPLES.md  claude.md  go.mod  go.sum  main.go  output.dual.complex.md  output.dual.md  simple.sh  test.sh  tingly-config.toml
example/tingly-loop/: README.md  agent.go  config.go  embed.go  go.mod  init.go  instructions.md  loop.go  main.go  prd.go  progress.go  spec.go  tasks.example  utils.go  worker.go
example/tool-pick/: README.md  USE_CASES.md
pkg/agent/: base.go  compression.go  compression_test.go  dualact.go  dualact_conclusion.go  dualact_config.go  dualact_test.go  integration_test.go  react_agent.go  user_agent.go
pkg/embedding/: errors.go  (+8 more)
react-fetch-demo/: go.mod
sidecar/: main.go
sidecar/rust/: Cargo.toml  build.rs
sidecar/rust/src/: main.rs
(+168 files in other folders)
