[package]
name = "rust-sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

# Candle ML framework
candle-core = { version = "0.8", features = ["metal"] }
candle-transformers = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }
tokenizers = "0.20"
hf-hub = "0.4"

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-transformers/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]
mkl = ["candle-core/mkl", "candle-transformers/mkl", "candle-nn/mkl"]
